dpkg (1.17.16) UNRELEASED; urgency=low

  * Set the copyright holder in the po4a calls for man pages.
  * Switch remaining topic to named variable in Dpkg::Source::Patch:analyze(),
    otherwise the loop was expecting values in one variable but storing them
    in another. Regression introduced in dpkg 1.17.14. Closes: #764206

 -- Guillem Jover <guillem@debian.org>  Mon, 06 Oct 2014 03:37:15 +0200

dpkg (1.17.15) unstable; urgency=low

  * Do not blacklist pie and stackprotector build flags on mips/mipsel.
    Thanks to Aurelien Jarno <aurelien@aurel32.net>. Closes: #763672
  * Fix build failures due to mismatched umask in libdpkg tar test case.
    Set it to a known value of 0022.

 -- Guillem Jover <guillem@debian.org>  Mon, 06 Oct 2014 03:21:58 +0200

dpkg (1.17.14) unstable; urgency=low

  [ Guillem Jover ]
  * Fix '--' to '-' on translations for single character options.
  * Correct the copyright holder in the gettext Makevars files.
  * Switch debian/copyright to machine-readable format 1.0, and extensively
    update the information within.
  * Bump Standards-Version to 3.9.6 (no changes needed).
  * Disable unused run-time type information for dselect.
  * Fix compiler flag detection with non-GCC compilers in the build system.
  * Fix perl warning on dpkg-source when typing Ctrl-D on patch name prompt.
  * Add new dpkg-deb --ctrl-tarfile command.
  * dpkg-architecture:
    - Add support for target system information via the new DEB_TARGET_ family
      of variables, and new -A and -T options to override defaulting to the
      host system.
    - Clarify that -a, -t, -e and -i work with the host system.
  * Place 'Commands:' before 'Options:' sections on --help output in
    dpkg-architecture and dpkg-vendor.
  * Always warn in dpkg-genchanges on missing Section or Priority value,
    either empty or '-'.
  * Fix order of Files field on generated .changes file in dpkg-genchanges.
    Regression introduced in dpkg 1.17.7.